SUBDIRS = man

dist_doc_DATA = \
	ABOUT-NLS \
	amulesig.txt \
	amule-win32.HOWTO.txt \
	Changelog \
	ED2K-Links.HOWTO \
	INSTALL \
	license.txt \
	README \
	TODO \
	EC_Protocol.txt \
	socks4.protocol

EXTRA_DIST = \
	Doxyfile \
	README.Mac.txt \
	README.Windows.txt \
	Releases.dia

MAINTAINERCLEANFILES = Makefile.in
