dist_skin_DATA = \
		Toolbar_Import.png \
		Toolbar_Shared.png \
		Toolbar_About.png \
		Toolbar_Messages.png \
		Toolbar_Stats.png \
		Toolbar_Connect.png \
		Toolbar_Network.png \
		Toolbar_Transfers.png \
		Toolbar_Connecting.png \
		Toolbar_Prefs.png \
		Toolbar_Disconnect.png \
		Toolbar_Search.png

skindir = $(pkgdatadir)/skins/gnome
